# ContextDesk

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  branding.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/cd-core/: Cargo.toml  build.rs
crates/cd-core/examples/: embed_host.rs
crates/cd-core/src/: agent.rs  ai_probe.rs  audit.rs  branding.rs  build_identity.rs  chat.rs  config.rs  confluence_ro.rs  connectors.rs  discovery.rs  embed.rs  error.rs  events.rs  git_source.rs  grok_auth.rs  home_source.rs  http_preset.rs  index.rs  index_watch.rs  injection.rs  keychain_store.rs  lib.rs  mcp_client.rs  memory_fs.rs  module_registry.rs  modules.rs  news_sources.rs  object_store.rs  paths.rs  permissions.rs  preflight.rs  probe.rs  providers.rs  redact.rs  research.rs  router.rs  s3_object_store.rs  session_context.rs  sessions.rs  skills.rs  (+10 more)
crates/cd-core/src/harvest/: apply.rs  mod.rs  publish.rs  store.rs  sync.rs  transform.rs  types.rs
crates/cd-core/src/log_analysis/: analysis.rs  drain.rs  embed_policy.rs  ingest.rs  mod.rs  parse.rs  redact_log.rs  search.rs  store.rs  tools.rs  why.rs
crates/cd-core/src/memory/: ambient.rs  candidates.rs  cue.rs  dedup.rs  edges.rs  facade.rs  import.rs  migrate.rs  mod.rs  recall.rs  score.rs  sqlite_store.rs  tools.rs  types.rs
crates/cd-core/tests/: golden_research.rs  golden_retrieval.rs
crates/cd-core/tests/fixtures/: mcp_echo_server.py
crates/cd-server/: Cargo.toml
crates/cd-server/src/: jira.rs  main.rs  telegram.rs  watchers.rs
crates/cd-server/tests/fixtures/: jira_mcp_server.py
desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
desktop/public/: critical-boot.css  theme-init.js
desktop/scripts/: dev-port.mjs  gen-tauri-conf.mjs  gen-tauri-conf.test.mjs  tauri-cli.mjs  tauri-dev.mjs
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  s3_backup_host_tests.rs
desktop/src/assets/fonts/: fonts.css  fontsOffline.test.ts
desktop/src/components/: CommandPalette.tsx  Composer.tsx  HelpTip.tsx  MarkdownBody.test.ts  MarkdownBody.tsx  PermissionModal.tsx  PreflightPanel.tsx  RenameChatModal.tsx  SessionContextBar.tsx  SettingsModal.tsx  SourceCitations.tsx  StreamLiveRegion.tsx  ThinkingIndicator.tsx  ToolCallList.tsx  icons.tsx
desktop/src/components/forms/: Field.tsx  index.ts
desktop/src/components/launch/: ContextDeskMark.tsx  IdentityPhase.tsx  PreLaunchScreen.tsx  ProbeDiagnostics.test.ts  ProbeDiagnostics.tsx  SplashScreen.css  SplashScreen.tsx  WizardStepIndicator.tsx  WorkContextPills.tsx  launch.css  splashDuration.test.ts  splashDuration.ts
desktop/src/components/panes/: ChatArchivePane.tsx  CompositionPane.tsx  HarvestPane.tsx  LogPane.tsx  MemoryPane.tsx  SourcePreviewPane.tsx  TodoPane.tsx
desktop/src/components/settings/: AiSection.tsx  AiSetupWizard.tsx  AppearanceSection.tsx  BackupSection.test.ts  BackupSection.tsx  ConnectorsSection.tsx  GeneralSection.tsx  ModulesSection.tsx  PreflightSection.tsx  SkillsSection.tsx  WorkspaceSection.tsx  settingsSplit.test.ts  useSettingsController.ts
desktop/src/components/shell/: Banners.tsx  ChatContextMenu.tsx  ChatPane.tsx  MessageRow.test.ts  MessageRow.tsx  PaneTabs.tsx  SessionSidebar.tsx  StatusBar.tsx  Titlebar.tsx  UpdateBanner.tsx  Workspace.tsx  messageWindow.test.ts  messageWindow.ts  titlebarChrome.test.ts
desktop/src/hooks/: ensureActiveSession.test.ts  useChatScroll.ts  useChatSessions.ts  useKeyboardShortcuts.ts  useMessageWindow.ts  useShellState.ts  useTurnController.ts
desktop/src/lib/: a11y.test.ts  a11y.ts  aiGatewayPrefs.test.ts  aiGatewayPrefs.ts  commandPalette.test.ts  commandPalette.ts  completePermission.test.ts  dialogs.ts  errorReport.test.ts  errorReport.ts  host.test.ts  host.ts  preflight.test.ts  preflight.ts  preflightCategories.test.ts  preflightCategories.ts  proposeConfluencePublish.test.ts  settingsOpenGate.test.ts  settingsOpenGate.ts  skins.test.ts  skins.ts  todoStorage.test.ts  todoStorage.ts  turn.test.ts  turn.ts  updatePoll.test.ts  updatePoll.ts  updaterConfig.test.ts
desktop/src/lib/session/: dto.ts  index.ts  meta.test.ts  meta.ts  types.ts
desktop/src/styles/: base.css  layout.css  tokens.css
desktop/src/styles/components/: chat.css  command-palette.css  composer.css  composition.css  forms.css  help-tip.css  panes.css  settings.css  tools.css
desktop/src/styles/themes/: dark.css  forest.css  light.css  sand.css  skinContrast.test.ts  slate.css  slateContrast.test.ts
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  BACKLOG_AUDIT.md  CLAIMS.md  CLOSE_PROOF.md  COMMUNITY.md  DEV.md  ISSUE_HONESTY.md  MODULES.md  NON_GOALS.md  PACKAGING.md  PLATFORMS.md  PRODUCT.md  PROTOCOL.md  RENAME.md  ROADMAP.md  SKILLS.md  SKINS.md  THREAT_MODEL.md  memory-half-lives.md
docs/adr/: 0001-external-module-substrate.md  0002-server-authoritative-sync.md  0003-chat-bridge-permission-authority.md  0004-watchers-triggers.md  0005-jira-integration.md  0006-s3-object-storage.md  0007-composition-preview-pane.md
docs/design/: CONFLUENCE_GAP.md  CONFLUENCE_HARVEST_MEMORY_TRANSFORM.md  LAUNCH.md  LOG_ANALYSIS.md  MEMORY.md
docs/examples/: host-adapter.md
docs/goals/: GOAL_UPDATES_AND_CHAT_CONTEXT.md  GOAL_UPDATES_CONTEXT_HARVEST.md
docs/media/: README.md
examples/modules/: registry-fixture.json
examples/modules/echo-notes/: README.md  module.toml  server.mjs
examples/skills/log-triage/: SKILL.md
fixtures/kb/: auth.md  auth_gateway.md  billing.md  deploy_runbook.md
scripts/: check_claims.sh  check_close_proof.sh
scripts/fixtures/: close_proof_dupes.json  close_proof_sample.json
