[workspace]
resolver = "2"
members = [
    "crates/cd-core",
    "crates/cd-server",
    # "desktop/src-tauri",  # nested after scaffold
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/chriscase/ContextDesk"
authors = ["ContextDesk contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
tracing = "0.1"
toml = "0.8"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }
url = "2"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
