[package]
name = "cd-core"
description = "ContextDesk core library: providers, tools, workspace, agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
# Postgres RO agent tool (#130) — NoTls for sslmode=disable; prefer/require refused clearly
tokio-postgres = "0.7"
# Filesystem watch for incremental index invalidation (#116)
notify = "6.1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
sha2 = "0.10"
wiremock = "0.6"
