[package]
name = "cd-core"
description = "ContextDesk core library: providers, tools, workspace, agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
# Postgres RO agent tool (#130) — NoTls for sslmode=disable; prefer/require refused clearly
tokio-postgres = "0.7"
# Filesystem watch for incremental index invalidation (#116)
notify = "6.1"
sha2 = "0.10"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1.0.9"
tokio-postgres-rustls = "0.14.0"
# Session context zip ingest (#342)
zip = "2"
# Log event store — embedded DuckDB (MIT; LOG_ANALYSIS.md §10 / #358)
duckdb = { version = "1.10505.0", features = ["bundled"] }
# Local ONNX template embed (#359) — optional so default CI stays offline/fast.
# Enable with `--features log-fastembed` or desktop host feature.
fastembed = { version = "5", optional = true, default-features = false, features = [
  "ort-download-binaries-rustls-tls",
  "hf-hub-rustls-tls",
] }
# Optional S3-compatible transport (#418). Defaults are disabled so the SDK's
# unrelated local-filesystem backend is not compiled. The implementation uses
# `AmazonS3Builder::new` with explicit runtime credentials and never invokes
# its environment/instance-metadata loaders.
object_store_sdk = { package = "object_store", version = "0.14.1", optional = true, default-features = false, features = [
  "aws-base",
  "reqwest",
  "ring",
] }
reqwest13 = { package = "reqwest", version = "0.13.4", optional = true, default-features = false, features = [
  "rustls-no-provider",
  "stream",
] }

[features]
default = []
# Local ONNX template embeddings via fastembed-rs (downloads model on first use).
log-fastembed = ["dep:fastembed"]
# Explicit runtime credentials + SSRF-pinned S3-compatible requests.
s3-object-store = ["dep:object_store_sdk", "dep:reqwest13"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
sha2 = "0.10"
wiremock = "0.6"
